bk_ida/gobmkida/g2/set_depth_values
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/set_depth_values/src/engine/utils.c:1173:13: error: use of undeclared identifier 'node_limits_0'
v8 = 1000 * node_limits_0[10 - level] / 500; 
            ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/set_depth_values/src/obj/1/utils.o] Error 1
